# SimpleStructComms

./: CMakeLists.txt  LICENSE  README.md
include/: SimpleStructComms.hpp  SimpleStructCommsTwoWay.hpp
src/: client.cpp  server.cpp  test_delay.cpp  twoway.cpp
